6.5:
----

Added CM and SM fuel and empty mass to scenario file and adjusted masses to more accurately match reality.
Brought Saturn 1b mass and performance closer to reality.
Added Inertial Guidance Mode start time to scenario file.
Added pitch program to scenario file.
Added SIC and SII center engine shutdown time to scenario file.
Added PU shift time to scenario file.
Fixed weird pitch maneuver after interstage seperation.
Added variables for pre-entry CSM acceleration for unmanned flights (though currently not fully wired up).
Updated timings in Apollo 4 scenario to match those in the Mission Report document. Though they were already close!
Fixed passing of Realism value and audio language from CSM to LEM.
Added Rmaia's AGC 2.0 changes (e.g. new LEM ascent autopilot)
Added roughly correct masses for different payloads.
Added Apollo 13 O2 tank quantity sensor failure.
Added support for post-splashdown audio (e.g. Presidential congratulations).
Fixed compiler warning in saturn1b.cpp.
Updated CSM AGC banksums to match real data from Yaagc. Also, PRO key steps through sums, as well as VERB 33.
Launch apogee/perigee display now shows negative perigee, rather than zero, as per real AGC. Also apogee and perigee in 1/10 km.
New CSM control panels.

6.4:
----

Revised LEVA code, with 'flag planting' sound support.
Fixed up the LEM to work around missing sound if we switch to the lunar astronaut immediately after creating them.
Adjusted astronaut mesh position to make the walk closer to the moon's surface.
Turned more sounds into mission-specific sounds for NEP.
Added reentry documentation, cleaned up and added checklists.
Changed name of help file to Project_Apollo and changed help references in config files.
Fixed bug that caused CTD when pressing Shift-~.
Fixed touchdown points on LM ascent stage so it doesn't fall when released.
Made changes so that the Saturn V launches "heads-down". Scenarios changed as well.
Moved Pad 39A so it registers better with the tile.